# skills

./: README.md  pyproject.toml
portfolio/: SKILL.md  resume.md
portfolio/projects/: kapital.md  moow.md  proactive.md
portfolio/references/: aws-app.md  bir-mcp.md  c++.md  certificates.md  ysda.md
src/dirstore/: __init__.py
tests/: test_dirstore.py
